--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <img src="jojodle.png" class="center"></img>
-    <img src="jonathan.png" class="center"></img>
+    <img src="collage.jpg" class="background"></img>
     <div id="game-board">
 
     </div>
