--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 </head>
 <body>
     <img src="jojodle.png" class="center"></img>
-    
-    <div id="game-board">
+    <style>
+        div.background {
+            background: "collage.jpg";
+        }
 
+    </style>
+    <div class="background">
+    <div id="game-board">
+    </div>
     </div>
 
     <div id="keyboard-cont">
