--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="jojodle.png" class="center"></img>
     <style>
         div.background {
-            background: "collage.jpg";
+            background-image: "collage.jpg";
             opacity: 0.5;
         }
 
