--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <img src="jojodle.png" class="center"></img>
     <style>
         div.background {
-            background-image: url('collage.jpg');
             opacity: 0.5;
         }
 
@@ -63,7 +62,9 @@
         </div>
     </div>
     
-    <div class="background"></div>
+    <div class="background">
+        <img src="collage.jpg"></img>
+    </div>
 <script
 src="https://code.jquery.com/jquery-3.6.0.min.js"
 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
