--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
         div.background {
              opacity: 0.5;
-             position: relative;
+             position: absolute;
              z-index: 0;
             }
         
