--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     
     
     <div id="game-board">
-    <div id="background"></div>
+    <div class="background">
+        <img src="collage.jpg">
+    </div>
     </div>
 
     <div id="keyboard-cont">
