--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div id="game-board">
     <div class="background">
-        <img src="collage.jpg">
+        <img src="collage.jpg"></img>
     </div>
     </div>
     
