--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@ crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <script src="script.js" type="module"></script>
 </body>
+<footer>
+    A JoJo Word Game
+</footer>
 </div>
 </html>
